--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <main></main>
     <footer></footer>
     <h1>This is some text</h1> 
-
+    <h2>This is another heading</h2>
+    <p>This is a paragraph</p>
     <script src="scripts/main.js"></script>
 </body>
 </html>
