--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <header></header>
-        <ol id="list"></ol>
-    <main></main>
-    <footer></footer>
-    <h1>This is some text</h1> 
-    <h2>This is another heading</h2>
-    <p>This is a paragraph</p>
+    <h1>WDD330 - Portfolio</h1>
+    <p>Click the link below to view notes/projects from different weeks</p>
+    <ol id="list"></ol>
     <script src="scripts/main.js"></script>
 </body>
 </html>
