--- a/week2/teamActivity/index.html
+++ b/week2/teamActivity/index.html
@@ -6,13 +6,38 @@
     <title>Team Activity W02</title>
 </head>
 <body>
-    <label for="input"></label>
-    <input type="text" id="idinput">
+    <div id="challengeOne">
+        <h2>Challenge 1:</h2>
+        <label for="inputChallengeOne"></label>
+        <input type="text" id="inputChallengeOne">
 
-    <button></button>
+        <button id="buttonChallengeOne">Read and Write</button>
 
-    <div id="div1"></div>
+        <div id="divChallengeOne"></div>
+    </div>
 
-    <script src=""></script>
+    <div id="challengeTwo">
+        <h2>Challenge 2:</h2>
+        <label for="inputChallengeTwo"></label>
+        <input type="text" id="inputChallengeTwo">
+        
+        <button id="buttonChallengeTwo">Sum numbers up to input</button>
+
+        <div id="divChallengeTwo"></div>
+    </div>
+
+    <div id="challengeThree">
+        <h2>Challenge 3:</h2>
+        <label for="inputAChallengeThree">num1</label>
+        <input type="text" id="inputAChallengeThree">
+        <br>
+        <label for="inputBChallengeThree">num2</label>
+        <input type="text" id="inputBChallengeThree">
+        
+        <button id="buttonChallengeThree"> + </button>
+
+        <div id="divChallengeThree"></div>
+    </div>
+    <script src="teamActivity.js"></script>
 </body>
 </html>
