--- a/week1/index.html
+++ b/week1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="styles/week1.css">
     <style>
         * {
             text-align: left;
@@ -12,6 +12,9 @@
     </style>
 </head>
 <body>
+    <header>
+        <ol id="list"></ol>
+    </header>
     <h1>Some observations:</h1>
     <p>Unless the application is designed to “remember,"" it will not. This means that the programmer must tell the application exactly what and how to remember. This is basically the main idea of the local storage functionality</p>
     <p>Local storage will always be stored and accessed with a key value pair</p>
@@ -29,5 +32,7 @@
 
     <p>Most of the above questions are from the doing stuff with web things book's chapter on local storage. I have found answers to a few of them already.</p>
     <p><a href="story_editor.html">Here</a> is the little program that we wrote in that chapter</p>
+
+    <script src="../scripts/weeks.js"></script>
 </body>
 </html>
