--- a/week2/index.html
+++ b/week2/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 2 Notes/Code Examples</title>
-    <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="styles/week2.css">
 </head>
 <body>
@@ -15,6 +14,7 @@
         <h2>Team Activity</h2>
         <p>Click <a href="teamActivity/index.html">here</a> to see team activity</p>
         <h2>Week 2 Notes/Code Examples</h2>
+        <p><em>Please see the JS file "week2.js" and the console to see JS examples - especially from the coding challenges</em></p>
         <section>
             <div>
                 <label for="name">Name: </label>
@@ -32,7 +32,7 @@
         <section>
             <div>
                 <h2>Javascript: Novice to Ninja, Chapter 2: Programming Basics</h2>
-                <p>I had no idea you could set a gloabl variable by not using the let or const keywords before declaring the variable. This seems like more a bug, and not an efficient way of declaring a global variable.</p>
+                <p>I had no idea you could set a global variable by not using the let or const keywords before declaring the variable. This seems like more a bug, and not an efficient way of declaring a global variable.</p>
                 <p>You can concatenate two strings by either using the string.concat("string") method, or by simple adding them together - string + string.</p>
                 <p>the string.trim() method will remove any whitespace from the beginning and end of a string.</p>
                 <p>The string.repeat(x) will repeat the string x number of times - this is sort of like in Python if you multiply a string by some integer.</p>
@@ -184,7 +184,7 @@
     </main>
 
 
-    <script src="../scripts/main.js"></script>
+    <script src="../scripts/weeks.js"></script>
     <script src="scripts/week2.js"></script>
     
 </body>
