--- a/week3/teamActivity/index.html
+++ b/week3/teamActivity/index.html
@@ -5,6 +5,7 @@
     <title>Array Cardio 💪</title>
   </head>
   <body>
+    <div><a href="../">Back ></a></div>
     <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
     <script src="scripts/week3TeamActivity.js">
     
