added back button on team activity week 02

--- a/week4/teamActivity/index.html
+++ b/week4/teamActivity/index.html
@@ -11,6 +11,7 @@
 <body>
     <header></header>
     <main>
+        <div><a href="../">Back ></a></div>
         <table>
             <tbody></tbody>
         </table>
