--- a/week2/teamActivity/index.html
+++ b/week2/teamActivity/index.html
@@ -6,6 +6,7 @@
     <title>Team Activity W02</title>
 </head>
 <body>
+    <div><a href="../">Back ></a></div>
     <div id="challengeOne">
         <h2>Challenge 1:</h2>
         <label for="inputChallengeOne"></label>
