--- a/weightAndBalance/aircraft-data.html
+++ b/weightAndBalance/aircraft-data.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/main.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <a href="index.html">Weight and Balance</a>
@@ -13,14 +16,24 @@
 
     <main>
         <h2>Click an aircraft to see/edit data</h2>
-        <div>
-            <input type="button" value="Create New Plane" id="newPlaneBtn">
+        <div class="planeSection">
+            <div id="newPlaneBtn" class="planeList">Create New Plane</div>
+            
         </div>
         <div id='main'></div>
     </main>
 
     <footer></footer>
 
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-database.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-analytics.js"></script>
+
     <script src="scripts/editAircraft.js" type="module"></script>
 </body>
+
 </html>
